# rdf-elk

./: .gitignore  223p.ttl  Brick.ttl  Dockerfile  README.md  app.py  build-brick.svg.sh  build-docker.sh  build-svg.sh  make223p.py  makeBrick.py  output.js  package.json  pyproject.toml
elkjs-svg/: README.md  elkjs-svg.js  package-lock.json  package.json
elkjs-svg/test/: test-custom-styles.js  test-default-styles.js  test.js
models/223p/: doe-medium-office-ahu-vav.ttl
models/brick/: building.ttl  chiller-plant.ttl  smc.ttl  soda_hall.ttl
