[tool.poetry]
name = "rdf-elk"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"

[tool.poetry.dependencies]
python = "^3.7"
brickschema = "^0.6.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
